# fashion-cloud-assignment

./: README.md
code/: Dockerfile  README.md  __main__.py  docker-compose.yml  file.py  grouper.py  main.py  mapper.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
code/src/: file.py  grouper.py  main.py  mapper.py
code/tests/: acceptance_test.py  conftest.py  test_file.py  test_grouper.py  test_main.py  test_mapper.py
code/tests/test_data/: mappings_mini.csv  pricat_mini.csv
think/: diagram.drawio
