[tool.poetry]
name = "fashion-cloud-assignment"
version = "0.1.0"
description = "Procesesses price catalog using mapping rules and produces catalog data"
authors = ["akaldemir"]
readme = "README.md"
packages = [{include = "fashion_cloud_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
mypy = "^1.4.1"

[tool.mypy]
files = "map_reduce|pipe"
python_version = "3.11"
exclude = "tests/.*data"
ignore_missing_imports = true