[metadata]
name = fashion-cloud-assignment
version = 0.0.1

[mypy]
warn_return_any = True
warn_unused_configs = True

[flake8]
statistics = False
doctests = True
inline-quotes = double

max-returns = 2
max-line-length = 120
max-complexity = 10

select = B,C,D,E,F,W,T4,B9,B901,WPS
ignore = B950,E501,WPS305,D107,D202,D203,D401,W503,WPS412,E303,D200,C813
strictness = long

exclude = .git,__pycache__,.venv,.eggs,*.egg,build,setup.py,docs/**,.\venv